hphp/hack/test/typecheck/constraints/multi_as_invoke_bad.php.like_types.exp
File "multi_as_invoke_bad.php", line 21, characters 20-21:
Invalid argument (Typing[4110])
File "multi_as_invoke_bad.php", line 13, characters 27-27:
Expected I
File "multi_as_invoke_bad.php", line 19, characters 23-23:
But got dynamic because it is an unenforceable type
File "multi_as_invoke_bad.php", line 22, characters 20-21:
Invalid argument (Typing[4110])
File "multi_as_invoke_bad.php", line 16, characters 27-27:
Expected J
File "multi_as_invoke_bad.php", line 19, characters 23-23:
But got dynamic because it is an unenforceable type
File "multi_as_invoke_bad.php", line 24, characters 9-12:
You are trying to access the method 'Bong' but this is a value of generic type T (Typing[4062])
File "multi_as_invoke_bad.php", line 19, characters 23-23:
Definition is here
